--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,11 @@
 {
   "hosting": {
-    "source": ".",
+    "public": "out",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "frameworksBackend": {
-      "region": "europe-west1"
-    }
+    ]
   },
   "functions": {
     "source": "functions",
