--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -38,6 +38,10 @@ jobs:
         run: npm ci
         working-directory: ./functions
 
+      - name: Build Firebase Functions
+        run: npm run build
+        working-directory: ./functions
+
       - name: Install Firebase Tools
         run: npm install -g firebase-tools
 
